[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "wrf_massive"
author = { name="Maximilian Pierzyna", email="mail@maximilian-pierzyna.de" }
version = "1.0.0"
description = "Orchestrate a large number of WRF simulations with SLURM in a flexible way."
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["COPYING"]
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "click>=8.3.3",
    "dask>=2026.3.0",
    "h5netcdf>=1.8.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.9",
    "netcdf4==1.7.2", # don't update this as it causes strange pickle error when using wrf-python
    "numpy>=2.3.5",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "wrf-python", # requires gfortran compiler!
    "xarray>=2026.4.0",
]

[tool.uv.sources]
wrf-python = { git = "https://github.com/NCAR/wrf-python", tag = "v1.4.2" }

[tool.black]
line-length = 120  # align with pycharm
target-version = ["py312"]
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  # Don't format submodules
  ^/submodules
)
'''

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ipykernel>=7.2.0",
    "pip>=26.1",
    "pytest>=9.0.3",
]

